[package]
name = "longdouble"
version = "0.1.2"
edition = "2021"
description = "Provide the c_longdouble type for FFI interop"
repository = "https://github.com/pluots/longdouble"
homepage = "https://github.com/pluots/longdouble"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/longdouble"

[dependencies]
cfg-if = "1.0.0"
